# gitpal

./: .build.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GITHUB_SETUP.md  LICENSE  Makefile  README.md  build-strategy.md  changelog_plan.md  cmake_uninstall.cmake.in  git_tool_implementation_guide.md  github-README.md
.github/workflows/: build.yml
docs/: oauth-implementation-plan.md
feat/: build_plan.md
src/: app.pas  browser_launch.pas  claude_oauth_adapter.pas  claude_oauth_client.pas  claude_oauth_manager.pas  claude_oauth_provider.pas  command_changelog.pas  command_commit.pas  command_explain.pas  command_recover.pas  command_setup.pas  command_undo.pas  config_manager.pas  git.pas  gitpal.pas  gitpal_auth.pas  logging.pas  oauth_client.pas  oauth_server.pas  provider_config.pas  token_storage.pas
